# SLAE

./: README.md
Task5/src/: Chebyshev.hpp  SIM.hpp
Task5/tests/: iterator_cheb.cpp  iterator_simple.cpp  simple_chebyshev_iteration.txt  simple_chebyshev_time.txt  time_cheb.cpp  time_simple.cpp
src/: CMakeLists.txt  FastGradientDescent.hpp  JacobiM.cpp  SIM.cpp  SIMethods.hpp  SymGaussSeid.hpp  csr_matrix.cpp  csr_matrix.hpp  dense_matrix.cpp  dense_matrix.hpp  matrix.h  triag_solver.cpp  vector_operations.cpp  vector_operations.hpp
tests/: CMakeLists.txt  test_3.3.cpp  test_5.5.cpp  test_FGD.cpp  test_SGS.cpp  test_csr_matrix.cpp  test_dense_matrix.cpp
